--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
 </head>
 
 <body>
-<t1>um hullo</t1>
+  <div style="text-align: center">
+<t1>SNHU Computer Science Capstone</t1>
+<t2>Tanner Reichard</t2>
+<t3>We will make this look nice later.</t3>
+</div>
 </body>
