--- a/index.html
+++ b/index.html
@@ -6,13 +6,9 @@
   </div>
   <div>
     <h2>Code Review </h2>  
-     <iframe width="420" height="315"
-      src="https://youtu.be/ewYADRo5WqM">
-     </iframe> 
+     <link href="https://youtu.be/ewYADRo5WqM">Part 1</link> 
+     <link href="https://youtu.be/ylrTNqWyzEc">Part 2</link> 
 
-     <iframe width="420" height="315"
-      src="https://youtu.be/ylrTNqWyzEc">
-     </iframe> 
   </div>
 
   <div>
