--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </div>
   <div>
     <h2>Code Review </h2>  
-     <link href="https://youtu.be/ewYADRo5WqM">Part 1</link> 
-     <link href="https://youtu.be/ylrTNqWyzEc">Part 2</link> 
+     <a href="https://youtu.be/ewYADRo5WqM">Part 1</a> 
+     <a href="https://youtu.be/ylrTNqWyzEc">Part 2</a> 
 
   </div>
 
