--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+<head>
+      <style type="text/css">
+    .title {
+        color: blue;
+        text-decoration: bold;
+        text-size: 1em;
+    }
+
+    .author {
+        color: gray;
+    }
+    </style>
+</head>
+
 <body>
   <h1> Tanner Reichard SNHU CS499 Computer Science Capstone </h1>
   <div>
