--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <head>
       <style type="text/css">
-    .title {
+    div {
         color: blue;
         text-decoration: bold;
         text-size: 1em;
     }
 
-    .author {
+    p {
         color: gray;
     }
     </style>
