--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
   </div>
 
   <div>
-    <h2>Artifact Before and After</h2>
-    <p>EXPLAIN</p>
+        <h2>Artifact Before and After</h2>
+        <a href="https://youtu.be/stXctpqZdlc"> Project Code Review </a>
+        <p>EXPLAIN</p>
   </div>
 
   <div>
