--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@ I believe I’ve met several couse outcomes through this milestone, including Em
 As a reflection, this is quite stressful trying to get working since by the nature of the project, I would finish the databases enhancement first, then the data structures, then this one. I’ve hussled quite a bit, and I’ve made some decisive cut corners such as consolidating the customer page and the admin page into one, skipping the log in and security functionality to finish with the databases milestone, and the severe lack of any formatting aside from throwing the original’s css in and having whatever populate happen currently. I’ve learned a lot about how react works, and other functionalities including Neon, Zustand, and Vite. This was an excellent learning experience and I could have learned more given I had a bit more time, but I’m almost at the late-penalty due date. Granted I have enough time to circle back (not incredibly likely), I’d like to spruce some of this up and make it look extra polished for potential employers.
 
 To run the application, run two powershells, one into the CS499 folder for the database and api connection, and another into CS499/frontend. In the windows, run: npm run dev, and go to http://localhost:5173/.</p>
-        <a href="CS499 Milestone Two.docx"> Project Code Review </a>
+        
   </div>
+<a href="CS499%20Milestone%20Two.docx">Project Code Review</a>
 
     <div>
     <h2>Enhancement 2 Narrative</h2>
