--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
 
   <div>
-    <h2>Enhancement 1 Narrative</h2>
+      <h2>Enhancement 1 Narrative</h2>
     <p>    For this milestone, I’ve recreated the functionality of the Travlr Getaways fullstack MEAN application in the PostegreSQL, Express, React, and Node.js (PERN) stack. I chose this artifact for its complexity and its potential to be iterated on to showcase the skills I’ve attained through my work towards acquiringmy bachelors in Computer Science. With a fullstack application showing a well-roundedness with work in both backend processes and frontend functionality, plus the overall size of the project compared to the smaller and simpler projects in other classes, I thought this would be a suitably challenging and impressive artifact to improve.
 
 For this milestone, I have applied myself by recreating the functionality of the fullstack application, but with using the PERN stack. This shows a fluid and dynamic understanding of processes so that they can be translated into any language, and shows a high level of critical understanding of structuring software engineering and design.
@@ -42,9 +42,10 @@ I believe I’ve met several couse outcomes through this milestone, including Em
 As a reflection, this is quite stressful trying to get working since by the nature of the project, I would finish the databases enhancement first, then the data structures, then this one. I’ve hussled quite a bit, and I’ve made some decisive cut corners such as consolidating the customer page and the admin page into one, skipping the log in and security functionality to finish with the databases milestone, and the severe lack of any formatting aside from throwing the original’s css in and having whatever populate happen currently. I’ve learned a lot about how react works, and other functionalities including Neon, Zustand, and Vite. This was an excellent learning experience and I could have learned more given I had a bit more time, but I’m almost at the late-penalty due date. Granted I have enough time to circle back (not incredibly likely), I’d like to spruce some of this up and make it look extra polished for potential employers.
 
 To run the application, run two powershells, one into the CS499 folder for the database and api connection, and another into CS499/frontend. In the windows, run: npm run dev, and go to http://localhost:5173/.</p>
+        <a href="CS499%20Milestone%20Two.docx">Original Narrative Progress</a>
         
   </div>
-<a href="CS499%20Milestone%20Two.docx">Project Code Review</a>
+
 
     <div>
     <h2>Enhancement 2 Narrative</h2>
@@ -55,7 +56,8 @@ As a common accessibility feature with many sites, it made sense to include whil
 I believe I’ve met the course outcomes, but with time availability I can think of a few ways for even further improvement, such as sorting ascended vs descended and including the rest of the fields that can be logically sorted.
 
 During the process I was mentally thinking it would take as much time and effort as the first enhancement, which in hindsight didn’t make sense since that was building an entire application versus adding functionality to that application. However, my data structures and algorithms class was a few years ago now, so I did need to refresh my memory of it, but that was always pretty straightforward for me so it didn’t cause many issues. The only issues I see is the lack of polish and there are currently not many records, making it redundant until I can polish the outer look.</p>
-  </div>
+  <a href="CS499%20Milestone%20Three.docx">Original Narrative Progress</a>
+    </div>
 
     <div>
     <h2>Enhancement 3 Narrative</h2>
@@ -68,6 +70,7 @@ The sqlConn database connection variable in the tripsController.js file in the b
 I’ve included this as part of my enhancements because it handily shows an equal but better formatted and secured version of database storage than in my original artifact. Setting up the database with secured calls to get information from it shows my ability to demonstrate an ability to use well-founded and innovative techniques, skills, and tools in computing practices for the purpose of implementing computer solutions that deliver value and accomplish industry-specific goals, as well as develop a security mindset that anticipates adversarial exploits in software architecture and designs to expose potential vulnerabilities, mitigate design flaws, and ensure privacy and enhanced security of data and resources.
 
 Overall this enhancement was doable but some extenuating circumstances made it quite difficult to finish quickly. Using bcrypt to store encrypted passwords and compare them when the user is logging in was deceptively easy, and if I had more time I would’ve liked to delve further into what the standard is like in the industry today both for smaller scale apps an the behemoths. My biggest challenge was the time crunch, I usually do have some things come up in my classes but this final class the universe seems hell-bent on making sure I can’t finish things quickly and cleanly.</p>
-  </div>
+ <a href="CS499%20Milestone%20Four.docx">Original Narrative Progress</a>
+    </div>
   
 </body>
