--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <head>
       <style type="text/css">
     div {
-        color: blue;
-        text-decoration: bold;
-        text-size: 1em;
+          text-align: center;
+          width: 80%;
     }
 
     p {
