--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <head>
       <style type="text/css">
-    div {
+    body {
           text-align: center;
-          width: 80%;
+          width: 100%;
+
+    		justify-content: center;
     }
 
+main {
+        width: 73%; 
+        margin: 50px auto;
+        text-align: center; 
+	font-size: 26px;
+	font-family: Calibri, sans-serif;
+	line-height:40px;
+}
+
     p {
-        color: gray;
+        color: black;
     }
     </style>
 </head>
 
 <body>
+	<main>
   <h1> Tanner Reichard SNHU CS499 Computer Science Capstone </h1>
   <div>
     <h2>Self Assessment</h2>
@@ -71,5 +83,5 @@ I’ve included this as part of my enhancements because it handily shows an equa
 Overall this enhancement was doable but some extenuating circumstances made it quite difficult to finish quickly. Using bcrypt to store encrypted passwords and compare them when the user is logging in was deceptively easy, and if I had more time I would’ve liked to delve further into what the standard is like in the industry today both for smaller scale apps an the behemoths. My biggest challenge was the time crunch, I usually do have some things come up in my classes but this final class the universe seems hell-bent on making sure I can’t finish things quickly and cleanly.</p>
  <a href="CS499%20Milestone%20Four.docx">Original Narrative Progress</a>
     </div>
-  
+	</main>  
 </body>
