--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
       <style type="text/css">
     body {
+			background: url(bg-pattern.jpg) repeat-x center top;
           text-align: center;
           width: 100%;
 
