--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
       <style type="text/css">
     body {
-			background: url(bg-pattern.jpg) repeat-x center top;
+			background-color:powderblue;
           text-align: center;
           width: 100%;
 
