--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
       <h3>Artifact Before and After</h3>
       <a href="CS499%20Enhancement%20Compiling%20Instructions.docx">Original Artifact Zip</a>
       <a href="CS499%20Final.zip">Project Final Zip</a>
+      <h3>Compiling and Usage Instructions</h3>
       <a href="CS499%20Enhancement%20Compiling%20Instructions.docx">Compiling Instructions</a>
       <a href="CS499%20Enhancements%20Usage%20Instructions.docx">Usage Instructions</a>
+      <h3>Finished Project Overview</h3>
       <a href="https://youtu.be/stXctpqZdlc"> Project Code Review </a>
       <p>EXPLAIN</p>
     </div>
