--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div>
       <h3>Artifact Before and After</h3>
-      <a href="CS499%20Enhancement%20Compiling%20Instructions.docx">Original Artifact Zip</a>
+      <a href="travlr.zip">Original Artifact Zip</a>
     </br>
       <a href="CS499%20Final.zip">Project Final Zip</a>
       <h3>Compiling and Usage Instructions</h3>
